[gd_scene load_steps=3 format=3 uid="uid://e8k2v3y8rbvq"]

[ext_resource type="Script" path="res://src/ui_new/components/PrestigeBonusCard.gd" id="1_bonus"]
[ext_resource type="StyleBox" uid="uid://cwmijfvtxcg4s" path="res://themes/card.tres" id="2_style"]

[node name="PrestigeBonusCard" type="PanelContainer"]
custom_minimum_size = Vector2(0, 100)
theme_override_styles/panel = ExtResource("2_style")
script = ExtResource("1_bonus")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Bonus Name"
horizontal_alignment = 1

[node name="Description" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Bonus description"
horizontal_alignment = 1
autowrap_mode = 3

[node name="CostContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="VBox/CostContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Nivel 0/10"

[node name="CostLabel" type="Label" parent="VBox/CostContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "5 âœ¨"
horizontal_alignment = 2

[node name="BuyButton" type="Button" parent="VBox"]
layout_mode = 2
text = "COMPRAR"